fix size of circular pic and text align

--- a/app/assets/stylesheets/components/_event.scss
+++ b/app/assets/stylesheets/components/_event.scss
@@ -98,48 +98,62 @@
 //
         .date {
           font-size: 16px;
-          font-weight: bold;
+          font-weight: bolder;
           text-transform: uppercase;
         }
 
         .time {
           font-size: 30px;
           color: black;
+          font-weight: bolder;
         }
 
       }
 
       .event-index-profile {
-        width: 50%;
+        width: 55%;
         height: auto;
         position: relative;
         // float: right;
 
           h2 {
-            font-size: 12px;
-            margin: 0 0;
+            font-size: 14px;
+            // margin: 0 0;
+            // margin-top: 67px;
+            text-align: center;
             position: absolute;
+            margin-top: 56px;
+            margin-left: 28px;
             // left: 19px;
             // bottom: 29px;
-            left: 20%;
-            bottom: 31%;
+            // left: 20%;
+            // bottom: 31%;
+
+            //CIRCLE
+            // left: 13%;
+            // bottom: 12%;
           }
 
           img {
             display: block;
             // width: 100%;
-            width: 96%;
+            width: 128%;
             height: auto;
-            left: 8px;
-            bottom: 20px;
             // left: 7px;
             // bottom: 30px;
 
             position: absolute;
-            padding: 4px 4px 27px;
-            border-radius: 7px;
+            // padding: 4px 4px 27px;
+            // border-radius: 7px;
+            // left: 8px;
+            // bottom: 20px;
             border: 4px solid #90aebd;
             background: ghostwhite;
+
+            //CIRCLE
+            border-radius: 50%;
+            left: 3px;
+            bottom: 43px;
           }
         // }
 
